Init application on DOM ready event
Allows copy-paste url with anchor

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,7 @@
 <%= content_for :javascript do -%>
   <%= javascript_tag do %>
-    App.init();
+    $(function(){
+      App.init();
+    });
   <% end %>
 <% end -%>
